[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "aiosqlite>=0.21.0",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "ipykernel>=6.29.5",
    "langgraph>=0.5.3",
    "openai>=1.96.1",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
]
